# QuillSQL

./: .dockerignore  .gitignore  .history  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  architecture.html  benchmarks.html  btree_index.html  buffer_pool.html  contributing.html  disk_io.html  fly.toml  index.html  introduction.html  print.html  toc-19071d45.js  toc-1d3cbbe2.js  toc-3cb649c7.js  toc-458cad86.js  toc-93d94c91.js  toc-b5857736.js  toc-eb7c302c.js  toc.html  toc.js  transactions.html  typos.toml  vercel.json  wal.html
.github/workflows/: ci.yml  ci_typos.yml  mdbook.yml  release.yml
benches/: jit_micro.rs  storage_bench.rs  tpch.rs
buffer/: buffer_pool.html  page.html
crates/quill-core/: Cargo.toml
crates/quill-core/src/: database.rs
crates/quill-df/: Cargo.toml
crates/quill-df/src/: compiler.rs  exec.rs  expr.rs  extract.rs  lib.rs  rule.rs
crates/quill-jit/: Cargo.toml
crates/quill-jit/src/: compiler.rs  exec.rs  frontend.rs  ir.rs  kernel.rs  lib.rs  lowering.rs  pipeline.rs  rule.rs
crates/quill-jit/src/dialect/: mod.rs
crates/quill-jit/src/lower/: compiler.rs  mod.rs  options.rs
crates/quill-jit/src/mlir/: compiled.rs  dispatch.rs  emit.rs  lower.rs  mod.rs  tests.rs  verify.rs
crates/quill-jit/src/pipeline/: expr.rs  extract.rs  graph.rs  ir.rs  mod.rs  rule.rs
crates/quill-jit/src/runtime/: array.rs  eval.rs  exec.rs  kernel.rs  mod.rs  record.rs  sum.rs  tests.rs  value.rs
crates/quill-mlir/: Cargo.toml  build.rs
crates/quill-mlir/cpp/include/Quill/IR/: CMakeLists.txt  Dialect.h  QuillOps.td
crates/quill-mlir/cpp/lib/: Bridge.cpp  CMakeLists.txt  Dialect.cpp  Passes.cpp
crates/quill-mlir/native/: CMakeLists.txt
crates/quill-mlir/native/include/Quill/IR/: QuillDialect.h
crates/quill-mlir/native/lib/: CMakeLists.txt  QuillCAPI.cpp  QuillDialect.cpp  QuillPasses.cpp
crates/quill-mlir/src/: lib.rs
crates/quill-plan/: Cargo.toml
crates/quill-plan/src/: error.rs  expr.rs  graph.rs  lib.rs
crates/quill-runtime/: Cargo.toml
crates/quill-runtime/src/: array.rs  eval.rs  kernel.rs  lib.rs  record.rs  sum.rs  tests.rs  value.rs
doc/index/: CHANGELOG.md
docs/: architecture.md  architecture_analysis.md  book.toml  btree_index.md  buffer_pool.md  concurrency_examples.md  disk_io.md  oltp_roadmap.md  transactions.md  wal.md
docs/src/: SUMMARY.md  architecture.md  benchmarks.md  buffer_pool.md  contributing.md  introduction.md  transactions.md
docs/src/buffer/: buffer_pool.md  page.md
docs/src/execution/: volcano.md
docs/src/modules/: background.md  bin.md  buffer.md  catalog.md  config.md  execution.md  expression.md  index.md  optimizer.md  overview.md  plan.md  recovery.md  sql.md  storage.md  tests.md  transaction.md
docs/src/optimizer/: rules.md
docs/src/plan/: lifecycle.md
docs/src/recovery/: aries.md  wal.md  wal_refactor.md
docs/src/storage/: disk_io.md  page_layouts.md  table_heap.md
docs/src/transaction/: mvcc_and_2pl.md
examples/: profile_insert.rs  profile_mix_workload.rs
execution/: volcano.html
index/: btree_index.html
modules/: background.html  bin.html  buffer.html  catalog.html  config.html  execution.html  expression.html  index.html  optimizer.html  overview.html  plan.html  recovery.html  sql.html  storage.html  tests.html  transaction.html
optimizer/: rules.html
plan/: lifecycle.html
public/: docs.html  index.html
recovery/: aries.html  wal.html  wal_refactor.html
scripts/: bench_jit_micro.sh  bench_tpch.sh
src/: database.rs  error.rs  lib.rs
src/background/: mod.rs
src/buffer/: buffer_manager.rs  buffer_pool.rs  engine.rs  mod.rs  page.rs
src/buffer/lean/: buffer_manager.rs  buffer_pool.rs  manager.rs  metadata.rs  mod.rs  page.rs  page_table.rs  replacer.rs  segment.rs  swip.rs
src/buffer/standard/: buffer_manager.rs  buffer_pool.rs  mod.rs  page.rs
src/catalog/: catalog.rs  column.rs  core.rs  data_type.rs  information.rs  mod.rs  registry.rs  schema.rs  stats.rs
src/config/: mod.rs
src/cost/: mod.rs
src/df/: arrow.rs  ddl.rs  exec.rs  filter.rs  mod.rs  provider.rs
src/execution/: mod.rs
src/execution/physical_plan/: aggregate.rs  analyze.rs  create_index.rs  create_table.rs  delete.rs  drop_index.rs  drop_table.rs  empty.rs  filter.rs  index_scan.rs  insert.rs  limit.rs  mod.rs  nested_loop_join.rs  project.rs  scan.rs  seq_scan.rs  sort.rs  update.rs  values.rs
src/expression/: aggregate.rs  alias.rs  binary.rs  cast.rs  column.rs  literal.rs  mod.rs  util.rs
src/function/aggregate/: avg.rs  count.rs  mod.rs
src/index/: btree_index.rs  bz_index.rs  mod.rs
src/jit/: compiler.rs  dialect.rs  exec.rs  expr.rs  ir.rs  kernel.rs  lowering.rs  mod.rs  options.rs  pipeline.rs  rule.rs  runtime.rs
src/jit/mlir/: compiled.rs  dispatch.rs  emit.rs  mod.rs  native.rs  tests.rs  verify.rs
src/jit/runtime/: array.rs  eval.rs  mod.rs  sum.rs  tests.rs  value.rs
src/optimizer/: logical_optimizer.rs
src/optimizer/rule/: eliminate_limit.rs  merge_limit.rs  mod.rs  push_down_filter.rs  push_down_limit.rs  push_limit_to_scan.rs
src/plan/logical_plan/: aggregate.rs  analyze.rs  create_index.rs  create_table.rs  delete.rs  drop_index.rs  drop_table.rs  (+10 more)
src/recovery/: analysis.rs  control_file.rs  mod.rs  recovery_manager.rs  redo.rs  resource_manager.rs  undo.rs  wal.rs  wal_record.rs  wal_runtime.rs
src/session/: mod.rs
src/sql/: mod.rs  schema.rs
src/storage/: bitcask.rs  disk_manager.rs  disk_scheduler.rs  engine.rs  heap_recovery.rs  holt.rs  index.rs  keycode.rs  memory.rs  mod.rs  mvcc.rs  mvcc_heap.rs  record.rs  table_heap.rs  tuple.rs
src/tests/: holt_storage_tests.rs  mod.rs  recovery_tests.rs  sql_test.rs  transaction_tests.rs
src/transaction/: lock_guard.rs  lock_manager.rs  mod.rs  mvcc.rs  runtime.rs  state.rs  test.rs  transaction.rs  transaction_manager.rs  txn_context.rs
src/utils/: bitmap.rs  mod.rs  ring_buffer.rs  scalar.rs  table_ref.rs  util.rs
storage/: disk_io.html  page_layouts.html  table_heap.html
tests/: analyze.rs  datafusion_holt.rs  df_arrow_parquet.rs
transaction/: mvcc_and_2pl.html
(+130 files in other folders)
