
[package]
name = "quill-sql"
version = "0.3.1"
edition = "2021"
description = "A DataFusion-fronted SQL research engine backed by Holt storage"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"
readme = "README.md"

[dependencies]
log = "0.4.21"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
dashmap = "6.1.0"
derive-with = "0.6.0"
derive-new = "0.7.0"
comfy-table = "7.1.0"
thiserror = "2.0.12"
sqlparser = "0.34.0"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.12.0"
tokio = { version = "1.41.1", features = ["full"] }
rustyline = "15.0.0"
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
holt = "0.4.1"
datafusion = { version = "53.1.0", default-features = false, features = ["sql"] }
async-trait = "0.1"
futures = "0.3"

[features]
default = []
jit-mlir = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.1"
rand_chacha = "0.9"
regex = "1.9.1"
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = "0.19"
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "storage_bench"
harness = false
