
[package]
name = "quill-sql"
version = "0.3.1"
edition = "2021"
description = "A DataFusion, Arrow, Parquet, and MLIR SQL query compiler research engine"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"
readme = "README.md"

[dependencies]
comfy-table = "7.1.0"
thiserror = "2.0.12"
clap = { version = "4.3.19", features = ["derive", "cargo"] }
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.12.0"
tokio = { version = "1.41.1", features = ["full"] }
futures = "0.3.31"
rustyline = "15.0.0"
axum = { version = "0.7", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
datafusion = { version = "53.1.0", default-features = false, features = ["parquet", "sql"] }
melior = { version = "0.27.0", optional = true }

[features]
default = []
jit-mlir = ["dep:melior"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tpchgen-cli = "2.0.2"

[[bench]]
name = "jit_micro"
harness = false

[[bench]]
name = "tpch"
harness = false
