[package]
name = "quill-jit"
version = "0.3.1"
edition = "2021"
description = "Pipeline JIT, MLIR lowering, and Arrow kernel runtime for QuillSQL"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"

[dependencies]
datafusion = { workspace = true }
futures = { workspace = true }
melior = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
jit-mlir = ["dep:melior"]
