[package]
name = "quill-mlir"
version = "0.3.1"
edition = "2021"
description = "C++ and TableGen MLIR dialect support for QuillSQL JIT"
license = "MIT"
repository = "https://github.com/feichai0017/quillsql"
links = "quill_mlir"

[dependencies]
melior = { workspace = true }
mlir-sys = { workspace = true }

[build-dependencies]
cmake = "0.1"
